tests/baselines/reference/reachabilityChecks3.errors.txt
tests/cases/compiler/reachabilityChecks3.ts(3,1): error TS7028: Unused label.


==== tests/cases/compiler/reachabilityChecks3.ts (1 errors) ====
    
    let x = 1;
    loop: while (true) {
    ~~~~
!!! error TS7028: Unused label.
        if (x == 100) {
            break;
        }
        else {
            x++;
        }
    }